# ZeroDrive

./: .dockerignore  .gitignore  INSTALL_DEPENDENCIES.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: access_logs.py  admin.py  auth.py  bot.py  collaborators.py  favorites.py  nodes.py  shares.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  access_log.py  collaborator.py  favorite.py  node.py  share_link.py  storage.py  user.py
backend/app/schemas/: access_log.py  admin.py  auth.py  bot.py  collaborator.py  node.py  response.py  share_link.py
backend/app/services/: access_log_service.py  admin_service.py  bot_path.py  bot_service.py  collaborator_service.py  media_meta.py  node_download.py  node_service.py  share_link_service.py  storage.py  storage_bootstrap.py  thumbnail.py
backend/app/services/storage_drivers/: __init__.py  factory.py  local.py  protocol.py  s3.py
backend/data/: zerodrive.db
backend/scripts/: migrate.py  test_minio_connection.py
docs/: DATABASE.md  STORAGE_ARCHITECTURE.md  zerodrive-API.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/lib/: api.ts  clipboard.ts  driveApi.ts  fileTypeIcon.tsx  mediaPreview.ts
frontend/src/pages/: AccessLogsPage.tsx  AdminUsersPage.tsx  DrivePage.tsx  LoginPage.tsx  PublicSharePage.tsx  (+2 more)
(+14 files in other folders)
