[project]
name = "zerodrive-backend"
version = "0.1.0"
description = "ZeroDrive FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.12",
  "pydantic-settings>=2.6",
  "python-dotenv>=1.0",
  "passlib[bcrypt]>=1.7.4",
  "python-jose[cryptography]>=3.3",
  "sqlalchemy[asyncio]>=2.0.36",
  "aiosqlite>=0.20",
  "boto3>=1.35",
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.3", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
